scripts/fixtures/keep-check/pass/CommentMentionsClass.java
package com.revenuecat.fixtures;

import androidx.annotation.Keep;

// This line comment mentions: public class NotARealDeclaration {
/*
 * public class AlsoNotReal {
 */
@Keep
public class CommentMentionsClass {
}
