scripts/fixtures/keep-check/fail/JavaInlineBlockMissingKeep.java
package com.revenuecat.fixtures;

// Inline block comment before a real declaration must not hide it.
// Expected flagged: AfterInlineBlock
/* doc */ public class AfterInlineBlock {
}
